# cube-j1-mqtt-android

./: .gitignore  CMakeLists.txt  README.md  build_android_release.ps1  create_android_keystore.ps1
.github/workflows/: android-release.yml
android/: AndroidManifest.xml  build.gradle
android/src/net/nanami/cubej1mqtt/: CubeDiscovery.java
qml/: Main.qml
src/: CubeJClient.cpp  CubeJClient.h  DeviceDiscovery.cpp  DeviceDiscovery.h  ThemeController.cpp  ThemeController.h  main.cpp
